08.service&network/service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort # ClusterIP,LoanBalancer
  selector:
    app: myapp
    type: front-emd
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30008
