08.service&network/ingress-resource3.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec:
  rules:
    - host: wear.my-online-store.com
      http:
        paths:
          - path: /wear
            pathType: prefix
            backend:
              service:
                name: wear-service
                port:
                  number: 80
    - host: watch.my-online-store.com
      http:
      paths:
        - path: /wear
          pathType: prefix
          backend:
            service:
              name: watch-service
              port:
                number: 80
