08.service&network/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: api-pod
          namespaceSelector: # 포드 라벨과 네임스페이스 라벨 둘다 일치하는 포드만 접근가능
            matchLabels:
              name: pod
        - namespaceSelector: #다른네임스페이스에 해당네임스페이스로 트래픽 허용가능하게 가능
            matchLabels:
              name: pod
              # name: prod
        - ipBlock: # 클러스트 외부에 서버가 해당네트워크 정책에 트래픽 허용가능
            cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 80
